--- a/quiz.html
+++ b/quiz.html
@@ -13,17 +13,17 @@
                                                             <!--aqui empiezan el quizzz-->
                                                             <div id="quiz">
     <div class="caja1">  
-          En el mundo de Dragones y Mazmorras, ¿Quién es Elminster?
+          <!--En el mundo de Dragones y Mazmorras, ¿Quién es Elminster?-->
     </div>
                                                             
                         <div class="flexbox1">
-    <div class="caja2">Un bardo</div>
-    <div class="caja3">Un mercader</div>
+    <div class="caja2"><!--Un bardo--></div>
+    <div class="caja3"><!--Un mercader--></div>
                         </div>
                         
                         <div class="flexbox2">
-    <div class="caja4">Un mago</div>
-    <div class="caja5">Un marinero</div> 
+    <div class="caja4"><!--Un mago--></div>
+    <div class="caja5"><!--Un marinero--></div> 
                         </div>
                                                             </div>
                                                             <!--aqui acaba el quizzz-->
