--- a/quiz.html
+++ b/quiz.html
@@ -1,4 +1,4 @@
-git <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@ git <!DOCTYPE html>
     </div>
                                                             
                         <div class="flexbox1">
-    <div class="caja2"><!--Un bardo--></div>
+    <div class="caja2" id="caja2"><!--Un bardo--></div>
     <div class="caja3"><!--Un mercader--></div>
                         </div>
                         
